--- a/css/main.css
+++ b/css/main.css
@@ -325,16 +325,16 @@ img {
   text-align: center;
   text-transform: uppercase;
   color: var(--primary-white-color);
-  width: 360px;
+  max-width: 360px;
   margin-left: auto;
   margin-right: auto;
-  padding-bottom: 30px;
+  margin-bottom: 30px;
 }
 @media screen and (min-width: 1200px) {
   .hero__title {
     font-size: 44px;
     line-height: 1.3636363636;
-    width: 696px;
+    max-width: 696px;
   }
 }
 
@@ -808,6 +808,11 @@ img {
   margin-bottom: 20px;
   color: var(--primary-white-color);
 }
+@media screen and (min-width: 1200px) {
+  .join__title {
+    text-align: left;
+  }
+}
 
 .socials__link--color {
   background-color: rgba(255, 255, 255, 0.1);
@@ -824,6 +829,11 @@ img {
   text-align: center;
   margin-bottom: 20px;
   color: var(--primary-white-color);
+}
+@media screen and (min-width: 1200px) {
+  .subscribe__title {
+    text-align: left;
+  }
 }
 
 .subscribe__container {
@@ -850,7 +860,7 @@ img {
 }
 
 .subscribe__field {
-  width: 450px;
+  width: 100%;
   height: 50px;
   padding: 15px 16px;
   outline: unset;
@@ -901,6 +911,11 @@ img {
   line-height: 1.25;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
+}
+@media screen and (min-width: 480px) {
+  .subscribe__field {
+    width: 450px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .subscribe__field {
