--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -54,17 +54,18 @@
 	text-transform: uppercase;
 	color: var(--primary-white-color);
 
-	width: 360px;
+	max-width: 360px;
+	
 	margin-left: auto;
 	margin-right: auto;
-	padding-bottom: 30px;
+	margin-bottom: 30px;
 
 	// desctop screen
 	@media screen and (min-width: 1200px) {
 		font-size: 44px;
 		line-height: calc(60 / 44);
 
-		width: 696px;
+		max-width: 696px;
 	}
 }
 
