--- a/sass/components/_join.scss
+++ b/sass/components/_join.scss
@@ -11,4 +11,9 @@
 	margin-bottom: 20px;
 
 	color: var(--primary-white-color);
+
+	// desctop screen
+	@media screen and (min-width: 1200px) {
+		text-align: left;
+	}
 }
