--- a/sass/components/_subscribe.scss
+++ b/sass/components/_subscribe.scss
@@ -8,6 +8,11 @@
 	margin-bottom: 20px;
 
 	color: var(--primary-white-color);
+
+	// desctop screen
+	@media screen and (min-width: 1200px) {
+		text-align: left;
+	}
 }
 
 .subscribe__container {
@@ -24,7 +29,7 @@
 }
 
 .subscribe__field {
-	width: 450px;
+	width: 100%;
 	height: 50px;
 
 	padding: 15px 16px;
@@ -52,6 +57,11 @@
 		letter-spacing: 0.03em;
 
 		color: rgba(255, 255, 255, 0.6);
+	}
+
+	// mobile screen
+	@media screen and (min-width: 480px) {
+		width: 450px;
 	}
 
 	// desctop screen
